[gd_scene load_steps=9 format=3 uid="uid://cor8e17nm67bb"]

[ext_resource type="Script" uid="uid://bfh4xt0nnuwup" path="res://scripts/audio/audio_manager.gd" id="1_g438q"]
[ext_resource type="AudioStream" uid="uid://ckbxk613dss75" path="res://assets/sounds/ui/[ UI SELECT ] Coffee2.ogg" id="2_1bhas"]
[ext_resource type="AudioStream" uid="uid://na0ihexbuc4d" path="res://assets/sounds/ui/[ UI NOTIF ] African4.ogg" id="3_a233j"]
[ext_resource type="AudioStream" uid="uid://d1ctdtpher01" path="res://assets/sounds/ui/[ UI HOVER ] Minimalist1.ogg" id="4_otaxd"]
[ext_resource type="AudioStream" uid="uid://bwr2wr51vpeb" path="res://assets/sounds/ui/[ UI CANCEL ] African3.ogg" id="5_y7tkh"]
[ext_resource type="AudioStream" uid="uid://c26enieyy6ks2" path="res://assets/sounds/ui/[ UI ALERT ] Retro12.ogg" id="6_fdj0b"]
[ext_resource type="AudioStream" uid="uid://dby7e6j61w3yd" path="res://assets/sounds/ui/[ UI ACCEPT ] African2.ogg" id="7_qycvh"]
[ext_resource type="AudioStream" uid="uid://rwqrhovsc6hm" path="res://assets/sounds/ui/[ POPUP OPEN ] JDSherbert - Ultimate UI SFX Pack - Popup Open - 1.ogg" id="8_5gjg6"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_g438q")

[node name="ui_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1bhas")

[node name="ui_notif" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a233j")

[node name="ui_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_otaxd")

[node name="ui_cancel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_y7tkh")

[node name="ui_alert" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fdj0b")

[node name="ui_accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qycvh")

[node name="ui_pop_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5gjg6")
